                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 31-07-2005 updated: Norwegian language file (Thnx to vnm)
 - 31-07-2005 fixed: [ 1245983 ] id3 cover art with a picture type outside the id3 specs is not read
 - 30-07-2005 changed: file deletion from the media windows now use the filemanager (so recursive delete works)
 - 30-07-2005 fixed: Original zoom mode was incorrect.
 - 30-07-2005 added: to mplayer.conf, cache prefill (%), before playback starts.
 - 30-07-2005 updated: German language file
 - 30-07-2005 updated: Norwegian language file (Thnx to vnm)
 - 30-07-2005 changed: sounds.xml now uses action/window names instead of the id's to specify a sound for a action/window
                       Action names to use can be found here: http://manual.xboxmediacenter.de/wakka.php?wakka=KeyMappingXML&v=6gu
                       Window names to use can be found here: http://manual.xboxmediacenter.de/wakka.php?wakka=WindowList&v=13k6
                       The old sounds.xml format still works but will be removed soon, skinners please update your sounds.xml to the 
                       new system.
 - 30-07-2005 fixed: Use default MS Dash settings for analog playback (a few xboxes can't handle the dolby surround setting)
 - 30-07-2005 fixed: seeking in paplayer doesn't work for VBR mp3 files where the xing header is located before the first mp3 frame
 - 30-07-2005 updated: Finnish language file (Thnx to jutski)
 - 30-07-2005 updated: Korean language file (Thnx to AkoXko)
 - 30-07-2005 updated: Chinese (Simple) language file (Thnx to hibaby)
 - 30-07-2005 updated: Chinese (Traditional) language file (Thnx to omenpica)